--- a/html/index.html
+++ b/html/index.html
@@ -38,47 +38,17 @@
                             <input type="password" name="" id="password" required placeholder="password">
                         </td>
                     </tr>
-                    <tr>
-                        <th required>
-                            
-                        </th>
-                        <td>
+                     <tr>
+                        <th required > </th>
+                        <td >
                             <label for="male">male</label>
-                            <input type="radio" id="male">
+                            <input type="radio" id="male" name="gender">
+
                             <label for="female">female</label>
-                            <input type="radio" name="" id="female">
+                            <input type="radio" name="gender" id="female">
+
                             <label for="other">other</label>
-                            <input type="radio" name="" id="other">
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>
-                        </th>
-                        <td>
-                            <select name="city" id="city" required>
-                                <option value="Bihar">--place--</option>
-                                <option value="Bihar">Bihar</option>
-                                <option value="Bihar">Chenai</option>
-                                <option value="Bihar">Delhi</option>
-                                <option value="Bihar">Mumbbai</option>
-                                <option value="Bihar">Kolkata</option>
-                                <option value="Bihar">Up</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <td>
-                            <select name="education" id="education">
-                                <option value="10th">education</option>
-                                <option value="10th">8th</option>
-                                <option value="10th">10th</option>
-                                <option value="10th">10th + ITI</option>
-                                <option value="12th">12th</option>
-                                <option value="12th">12th + ITI</option>
-                                <option value="10th">bca</option>
-                                <option value="10th">mca</option>
-                            </select>
+                            <input type="radio" name="gender" id="other">
                         </td>
                     </tr>
                     <tr>
